--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 html {
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
