bg site loads! Lato font and mobile menu

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -187,7 +187,7 @@ textarea {
   font: inherit;
 }
 html {
-  font: 112.5%/1.45em georgia, serif;
+  font: 112.5%/1.45em "Lato", sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -202,7 +202,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: "Lato", sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -622,3 +622,7 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+.panel-open {display: flex;}
+.panel-closed {display: none;}
+
